Permettre d'importer un fichier databases en fonction de l'application

--- a/lib/config/config/config_handlers.yml
+++ b/lib/config/config/config_handlers.yml
@@ -4,6 +4,9 @@ config/autoload.yml:
 config/databases.yml:
   class:    sfDatabaseConfigHandler
 
+config/databases.*.yml:
+  class:    sfDatabaseConfigHandler
+
 config/settings.yml:
   class:    sfDefineEnvironmentConfigHandler
   param:
